--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   },
   "scripts": {
     "default": "run clean test build",
-    "cd": "run clean build release",
+    "cd": "run clean test build release",
     "clean": "rimraf ./build",
     "build": "run build:*",
     "build:dir": "mkdir -p ./build/pkg/",
@@ -79,14 +79,14 @@
   },
   "devDependencies": {
     "@nearmap/eslint-config-base": "^1.1.0",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.0.3",
     "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.0.2",
-    "eslint": "^6.2.2",
+    "cz-conventional-changelog": "^3.1.0",
+    "eslint": "^6.8.0",
     "eslint-cli": "^1.1.1",
     "eslint-plugin-babel": "^5.3.0",
     "npx-run": "^2.1.2",
-    "semantic-release": "^15.13.24",
+    "semantic-release": "^17.0.0",
     "semantic-release-vsce": "^2.2.8"
   },
   "config": {
