--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,14 @@ jobs:
     - name: install dependencies
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
+
       run: npm ci
 
     - name: build and release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
         CI: true
       run: npx run cd
 
