fix(release): use build/pkg dir for ext  as semantic-release-vsce cannot handle pkgRoot

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "request": "launch",
       "runtimeExecutable": "${execPath}",
       "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}/build/pkg"
+        "--extensionDevelopmentPath=${workspaceFolder}"
       ]
     }
   ]
