--- a/package.json
+++ b/package.json
@@ -86,9 +86,10 @@
     "release": "semantic-release"
   },
   "devDependencies": {
-    "@fink/cli": "^4.0.0",
-    "@fink/jest": "^4.0.0",
-    "@fink/loxia": "^7.0.0",
+    "@fink/cli": "^5.0.0",
+    "@fink/jest": "^5.0.0",
+    "@fink/loxia": "^8.0.0",
+    "@fink/std-lib": "^1.0.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.1.0",
     "jest-cli": "^26.0.0",
@@ -103,6 +104,6 @@
     }
   },
   "dependencies": {
-    "@fink/larix": "^8.1.0"
+    "@fink/larix": "^9.0.0"
   }
 }
