--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "@fink/cli": "^5.0.0",
     "@fink/jest": "^5.0.0",
     "@fink/loxia": "^8.0.0",
-    "@fink/std-lib": "^1.0.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.1.0",
     "jest-cli": "^26.0.0",
@@ -104,6 +103,7 @@
     }
   },
   "dependencies": {
-    "@fink/larix": "^9.0.0"
+    "@fink/larix": "^9.0.0",
+    "@fink/std-lib": "^1.0.0"
   }
 }
