--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       {
         "id": "fink-jsx-attr",
         "aliases": [
-            "fink-jsx-tags"
+          "fink-jsx-tags"
         ],
         "configuration": "./languages/jsx-attr.language-configuration.json"
       }
@@ -98,6 +98,7 @@
     "@fink/cli": "^6.0.0",
     "@fink/jest": "^5.0.3",
     "@fink/loxia": "^12.0.0",
+    "@semantic-release/exec": "^5.0.0",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.1.0",
     "jest-cli": "^26.1.0",
