--- a/package.json
+++ b/package.json
@@ -89,9 +89,12 @@
     "@babel/preset-env": "^7.12.1",
     "@fink/cli": "^8.0.0",
     "@fink/jest": "^7.0.0",
+    "@fink/js-interop": "^2.0.1",
+    "@fink/larix": "^14.0.0",
     "@fink/loxia": "^15.0.0",
     "@fink/require-hook": "^6.0.1",
     "@fink/rollup": "^1.0.0",
+    "@fink/std-lib": "^5.0.0",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
@@ -104,11 +107,6 @@
     "rollup": "^2.32.0",
     "semantic-release": "^17.2.1",
     "semantic-release-vsce": "^3.0.1"
-  },
-  "dependencies": {
-    "@fink/js-interop": "^2.0.1",
-    "@fink/larix": "^14.0.0",
-    "@fink/std-lib": "^5.0.0"
   },
   "config": {
     "commitizen": {
