--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/fink-lang/vscode-fink",
   "publisher": "fink",
   "main": "./build/pkg/extension.js",
+  "browser": "./build/pkg/extension.js",
   "activationEvents": [
     "onLanguage:fink"
   ],
@@ -32,7 +33,6 @@
           "fink+jsx"
         ],
         "extensions": [
-          ".fink",
           ".fnk"
         ],
         "firstLine": "^#!.*\\bfink",
@@ -49,7 +49,6 @@
         "scopeName": "source.fink",
         "path": "./build/pkg/grammars/fink.tmLanguage.json",
         "embeddedLanguages": {
-          "meta.embedded.inline.sql": "source.sql",
           "meta.embedded.block.fink": "fink",
           "meta.embedded.jsx.fink": "fink-jsx"
         }
@@ -95,17 +94,18 @@
     "@fink/require-hook": "^6.2.0",
     "@fink/rollup": "^1.3.0",
     "@fink/std-lib": "^8.5.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
-    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/exec": "^6.0.3",
+    "@vscode/test-web": "^0.0.15",
     "commitizen": "^4.2.1",
     "cz-conventional-changelog": "^3.3.0",
     "jest-cli": "^27.0.0",
     "nodemon": "^2.0.6",
     "npx-run": "^2.1.2",
     "rollup": "^2.32.0",
-    "semantic-release": "^17.2.1",
+    "semantic-release": "^18.0.0",
     "semantic-release-vsce": "^3.0.1"
   },
   "config": {
